// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIPill /> renders the pill with the business avatar prop 1`] = `
<div
  className="xui-pill xui-pill-medium xui-pill-has-avatar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
  >
    <img
      alt=""
      className="xui-pill--avatar xui-avatar xui-avatar-small xui-avatar-business xui-avatar-hidden"
      onError={[Function]}
      onLoad={[Function]}
      src="https://i.picsum.photos/id/1044/100/100.jpg?hmac=IGzsuFyCgR4u_DgqnNlOHxY-ThKh9C02XhZAqHyVy0Q"
    />
    <abbr
      className="xui-pill--avatar xui-avatar xui-avatar-small xui-avatar-business xui-avatar-color-7"
      role="presentation"
    >
      A
    </abbr>
  </span>
</div>
`;

exports[`<XUIPill /> renders the pill with the provided avatar component 1`] = `
<div
  className="xui-pill xui-pill-medium xui-pill-has-avatar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
  >
    <abbr
      className="xui-pill--avatar xui-avatar xui-avatar-small xui-avatar-color-8"
      role="presentation"
    >
      VP
    </abbr>
    <span
      className="xui-pill--text"
    >
      Value Pill
    </span>
  </span>
</div>
`;

exports[`<XUIPill /> renders the pill with the provided business avatar component 1`] = `
<div
  className="xui-pill xui-pill-medium xui-pill-has-avatar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
  >
    <abbr
      className="xui-pill--avatar xui-avatar xui-avatar-small xui-avatar-business xui-avatar-color-8"
      role="presentation"
    >
      VP
    </abbr>
    <span
      className="xui-pill--text"
    >
      Value Pill
    </span>
  </span>
</div>
`;

exports[`<XUIPill /> renders the pill with the specified value prop 1`] = `
<div
  className="xui-pill xui-pill-medium"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
  >
    <span
      className="xui-pill--text"
    >
      Value Pill
    </span>
  </span>
</div>
`;

exports[`<XUIPill /> should render a pill with the maxwidth limiting class 1`] = `
<div
  className="xui-pill xui-pill-maxwidth xui-pill-medium"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
  />
</div>
`;

exports[`<XUIPill /> should render a pills with correct size modifiers 1`] = `
<div
  className="xui-pill xui-pill-medium xui-pill-is-deletable xui-pill-has-avatar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
  >
    <abbr
      className="xui-pill--avatar xui-avatar xui-avatar-small xui-avatar-color-8"
      role="presentation"
    >
      TR
    </abbr>
    <span
      className="xui-pill--text"
    >
      Test
    </span>
  </span>
  <button
    aria-label="Delete"
    className="xui-button xui-pill--button-icon xui-button-icon-medium xui-button-icon"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
    title="Delete"
    type="button"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={7}
      viewBox="0 0 7 7"
      width={7}
    >
      <path
        d="M4.25 3.5L7 6.25 6.25 7 3.5 4.25.75 7 0 6.25 2.75 3.5 0 .75.75 0 3.5 2.75 6.25 0 7 .75 4.25 3.5z"
        role="presentation"
      />
    </svg>
    <div
      className="xui-touchtarget"
    />
  </button>
</div>
`;

exports[`<XUIPill /> should render a pills with correct size modifiers 2`] = `
<div
  className="xui-pill xui-pill-small xui-pill-is-deletable xui-pill-has-avatar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
  >
    <abbr
      className="xui-pill--avatar xui-avatar xui-avatar-xsmall xui-avatar-color-8"
      role="presentation"
    >
      TR
    </abbr>
    <span
      className="xui-pill--text"
    >
      Test
    </span>
  </span>
  <button
    aria-label="Delete"
    className="xui-button xui-pill--button-icon xui-button-icon-small xui-button-icon"
    disabled={false}
    onClick={[Function]}
    tabIndex={0}
    title="Delete"
    type="button"
  >
    <svg
      className="xui-icon"
      focusable="false"
      height={7}
      viewBox="0 0 7 7"
      width={7}
    >
      <path
        d="M4.25 3.5L7 6.25 6.25 7 3.5 4.25.75 7 0 6.25 2.75 3.5 0 .75.75 0 3.5 2.75 6.25 0 7 .75 4.25 3.5z"
        role="presentation"
      />
    </svg>
    <div
      className="xui-touchtarget"
    />
  </button>
</div>
`;

exports[`<XUIPill /> should render a target when passed in 1`] = `
<div
  className="xui-pill xui-pill-medium xui-pill-interactive"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <a
    className="xui-button xui-pill--content xui-pill--button"
    disabled={false}
    href="http://xero.com"
    onClick={[Function]}
    tabIndex={0}
    target="_blank"
  />
</div>
`;

exports[`<XUIPill /> should render a title when passed 1`] = `
<div
  className="xui-pill xui-pill-medium"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
  />
</div>
`;

exports[`<XUIPill /> should render an automation id when a qaHook is passed in 1`] = `
<div
  className="xui-pill xui-pill-medium"
  data-automationid="pill-test"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
    data-automationid="pill-test--inner"
  />
</div>
`;

exports[`<XUIPill /> should render an error icon when invalid 1`] = `
<div
  className="xui-pill xui-pill-medium xui-pill-is-invalid xui-pill-has-avatar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
  >
    <div
      className="xui-pill--avatar xui-pill--erroricon xui-pill--erroricon-small"
    >
      <svg
        className="xui-icon xui-icon-color-red"
        focusable="false"
        height={8}
        viewBox="0 0 2 8"
        width={2}
      >
        <path
          d="M0,0 L2,0 L2,5 L0,5 L0,0 Z M0,6 L2,6 L2,8 L0,8 L0,6 Z"
          role="presentation"
        />
      </svg>
    </div>
    <span
      className="xui-pill--text"
    >
      Error pill
    </span>
  </span>
</div>
`;

exports[`<XUIPill /> should render an error icon when invalid even with an avatar 1`] = `
<div
  className="xui-pill xui-pill-small xui-pill-is-invalid xui-pill-has-avatar"
  onBlur={[Function]}
  onFocus={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <span
    className="xui-pill--content"
  >
    <div
      className="xui-pill--avatar xui-pill--erroricon xui-pill--erroricon-xsmall"
    >
      <svg
        className="xui-icon xui-icon-color-red"
        focusable="false"
        height={8}
        viewBox="0 0 2 8"
        width={2}
      >
        <path
          d="M0,0 L2,0 L2,5 L0,5 L0,0 Z M0,6 L2,6 L2,8 L0,8 L0,6 Z"
          role="presentation"
        />
      </svg>
    </div>
    <span
      className="xui-pill--text"
    >
      A
    </span>
  </span>
</div>
`;

exports[`<XUIPill /> should render inside a tooltip when using the debug flag 1`] = `
<span
  className="xui-tooltip xui-tooltip-tipopen xui-tooltip-inline-flex"
  onMouseOut={[Function]}
  onMouseOver={[Function]}
>
  <div
    aria-describedby="tooltipDebugId"
    className="xui-pill-parentmaxwidth"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <div
      className="xui-pill xui-pill-medium"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      <span
        className="xui-pill--content"
      />
    </div>
  </div>
  <span
    className="xui-positioningInline"
    style={
      Object {
        "flexDirection": "column",
        "top": undefined,
      }
    }
  >
    <span
      aria-hidden={false}
      className="xui-tooltip--tip xui-tooltip--tip-open"
      id="tooltipDebugId"
      role="tooltip"
      style={
        Object {
          "marginLeft": null,
          "marginRight": -220,
          "maxHeight": null,
          "maxWidth": null,
          "minWidth": null,
          "width": null,
        }
      }
    />
  </span>
</span>
`;
